--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^6.2.4",
     "net": "^1.0.2",
+    "nth-check": "^2.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-lorem-ipsum": "^1.4.9",
